--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "changelly-api",
-  "version": "1.1.0",
+  "name": "changelly-api-ngfar",
+  "version": "1.1.4",
   "description": "Changelly API package",
   "main": "lib.js",
   "dependencies": {
